--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "import:tours-to-database": "node commands/import-dev-data.js --import",
+    "delete:tours-from-database": "node commands/import-dev-data.js --delete"
   },
   "repository": {
     "type": "git",
