--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "consistent-return": "off",
     "func-names": "off",
     "object-shorthand": "off",
+    "no-plusplus": "off",
     "no-process-exit": "off",
     "no-param-reassign": "off",
     "no-return-await": "off",
