--- a/config.env.example
+++ b/config.env.example
@@ -2,3 +2,10 @@ NODE_ENV=development
 DATABASE=
 DATABASE_PASSWORD=
 PORT=3000
+JWT_SECRET=
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
