✨ add reviews create and list

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start:dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "import:tours-to-database": "node commands/import-dev-data.js --import",
-    "delete:tours-from-database": "node commands/import-dev-data.js --delete",
+    "import:database": "node commands/import-dev-data.js --import",
+    "delete:database": "node commands/import-dev-data.js --delete",
     "debug": "node server.js"
   },
   "repository": {
