--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "import:database": "node commands/import-dev-data.js --import",
     "delete:database": "node commands/import-dev-data.js --delete",
-    "debug": "node server.js"
+    "debug": "node server.js",
+    "watch:js": "set HMR_PORT=8080 && PARCEL_WORKERS=0 parcel watch ./public/js/index.js --dist-dir ./public/js/dist",
+    "build:js": "set HMR_PORT=8080 && PARCEL_WORKERS=0 parcel build ./public/js/index.js --dist-dir ./public/js/dist"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,9 @@
   },
   "homepage": "https://github.com/AhmedHelalAhmed/natours#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -33,11 +37,13 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
+    "regenerator-runtime": "^0.13.11",
     "slugify": "^1.6.5",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "buffer": "^5.7.1",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -46,9 +52,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "parcel": "^2.8.3",
     "prettier": "^2.8.4"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "targets": {
+    "main": false
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
